--- a/gabriel/style.css
+++ b/gabriel/style.css
@@ -1,16 +1,4 @@
-Body{
-    background:  #000003;
-}
-.uno{
-    width: 50%;
-    height: 30%;
-}
-h1{
-    color: #fbf9fc;
-}
-P1{
-    color: #ffffff;
-}
-P2{
-    color: #f9f9fa;
+b1{
+    color: #a50909;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
